syntax = "proto3";

package proto.services.tasks_svc.v1;

option go_package = "gen/proto/services/tasks-svc";

import "google/protobuf/empty.proto";

enum TaskStatus {
  TASK_STATUS_UNSPECIFIED = 0;
  TASK_STATUS_TODO = 1;
  TASK_STATUS_IN_PROGRESS = 2;
  TASK_STATUS_DONE = 3;
}

//
// CreateTask
//

message CreateTaskRequest {
  string name = 1; // @gotags: validate:"required"
}

message CreateTaskResponse {
  string id = 1;
}

//
// GetTask
//

message GetTaskRequest {
  string id = 1; // @gotags: validate:"uuid4"
}

message GetTaskResponse {
  string id = 1;
  string name = 2;
  repeated string assigned_users = 3;
  repeated Subtask subtasks = 4;

  message Subtask {
    string id = 1;
    string name = 2;
    bool done = 3;
  }
}

//
// AssignTask
//

message AssignTaskRequest {
  string task_id = 1; // @gotags: validate:"uuid4"
  string user_id = 2; // @gotags: validate:"uuid4"
}

message AssignTaskResponse {}

//
// CreateSubtask
//

message CreateSubtaskRequest {
  string task_id = 1; // @gotags: validate:"uuid4"
  Subtask subtask = 2;

  message Subtask {
    string name = 1;
  }
}

message CreateSubtaskResponse {
  string subtask_id = 1;
}

//
// CompleteSubtask
//

message CompleteSubtaskRequest {
  string task_id = 1; // @gotags: validate:"uuid4"
  string subtask_id = 2; // @gotags: validate:"uuid4"
}

message CompleteSubtaskResponse {}

//
// UncompleteSubtask
//

message UncompleteSubtaskRequest {
  string task_id = 1; // @gotags: validate:"uuid4"
  string subtask_id = 2; // @gotags: validate:"uuid4"
}

message UncompleteSubtaskResponse {}

//
// TaskService
//

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {}
  rpc AssignTask(AssignTaskRequest) returns (AssignTaskResponse) {}
  rpc CreateSubtask(CreateSubtaskRequest) returns (CreateSubtaskResponse) {}
  rpc CompleteSubtask(CompleteSubtaskRequest) returns (CompleteSubtaskResponse) {}
  rpc UncompleteSubtask(UncompleteSubtaskRequest) returns (UncompleteSubtaskResponse) {}
}
